--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 #landing {
-    padding: 10%;
+    padding: 15%;
     border-radius: 0px 0px 5px 5px;
     background-color: #373f52;
 }
@@ -13,7 +13,11 @@ html {
 }
 
 h1, p {
-    color: white;
+    color: #4b7696;
+}
+
+.display-4 {
+    color: #0a7aa5;
 }
 
 a {
@@ -24,19 +28,38 @@ a:hover {
     color: lightgrey!important;
 }
 
-#about {
-    padding-top: 5%;
-    padding: 10%;
+#projects {
+    padding-top: 10%;
+    padding-bottom: 7%;
 }
 
-#projects {
-    padding: 10%;
+#about {
+    padding: 7%;
 }
+
+
 
 #contact {
-    padding: 10%;
+    padding: 7%;
+}
+
+.card {
+    border: none!important;
+}
+
+.card-body {
+
+  background-color:yellow;
+  box-shadow:10px 10px 10px 1px #2e3135;
+
+    background-color: #373f52;
+
+}
+
+.card-title {
+    color: white;
 }
 
 p.card-text {
-    color: black;
+    color: white;
 }
